--- a/index.html
+++ b/index.html
@@ -3,18 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <head>
-        <h1>portofolio dhias</h1>
+        <h1>Hallo teman teman</h1>
     </head>
     <p>nama saya <b>dhias erpangga yoga</b> , nim <i>122140109</i>  dari <u>sabah balau</u></p>
-    <img src="foto dhias.jpeg" alt="sebuah foto dhias">
+    <img src="foto dhias.jpeg" alt="sebuah foto">
     <ul>
+        <h2 class="riwayat">riwayat pendidikan</h2>
+        <li>sd 1 sabah balau</li>
+        <li>smpn 24 bandar lampung</li>
+        <li>sman 12 bandar lampung</li>
+
+        <h2>silsilah keluarga</ul>
+
         <li>anak ke dua</li>
         <li>suka makan sayur</li>
         <li><a href="https://github.com/dhiaserpanggayoga/dhiaserpanggayoga">akun github</a></li>
+
+        <h2>makanan favorit</h2>
+        <li>sayur sayuran</li>
     </ul>
 </body>
 </html>
